--- a/fdm_humanize/templates/file_analysis.html
+++ b/fdm_humanize/templates/file_analysis.html
@@ -87,13 +87,14 @@
                 margin-top: 8px;
             }
         }
+
     </style>
 </head>
 <body>
     <header>
-        <h1>File Analysis</h1>
+            <h1>File Analysis</h1>
         <nav>
-            <a href="{{ url_for('main_page') }}">Upload</a>
+            <a href="{{ url_for('index') }}">Upload</a>
             <a href="{{ url_for('list_files') }}">Files</a>
         </nav>
     </header>
